@@ -218,13 +218,8 @@ authreadkeys(
 		keytype = keytype_from_text(token, NULL);
 		if (keytype == 0) {
 			log_maybe(NULL,
-				  "authreadkeys: invalid type for key %d",
+				  "authreadkeys: invalid type/algorithm for key %d",
 				  keyno);
-		} else if (EVP_get_digestbynid(keytype) == NULL) {
-			log_maybe(NULL,
-				  "authreadkeys: no algorithm for key %d",
-				  keyno);
-			keytype = 0;
 		}
 #else	/* !OPENSSL follows */
 		/*
