@@ -63,7 +63,7 @@ void
 ssl_check_version(void)
 {
 	u_long	v;
-	
+
 	v = OpenSSL_version_num();
 	if ((v ^ OPENSSL_VERSION_NUMBER) & ~0xff0L) {
 		msyslog(LOG_WARNING,
@@ -88,65 +88,61 @@ ssl_check_version(void)
  */
 int
 keytype_from_text(
-	const char *text,
-	size_t *pdigest_len
+	const char *	text,
+	size_t *	pdigest_len
 	)
 {
 	int		key_type;
 	u_int		digest_len;
-#ifdef OPENSSL
-	const u_long	max_digest_len = MAX_MAC_LEN - sizeof(keyid_t);
-	u_char		digest[EVP_MAX_MD_SIZE];
+
+	/*----------------------------------------------------------- */
+#ifdef OPENSSL	/* --*-- OpenSSL code --*-- */
+	/*----------------------------------------------------------- */
+
 	char *		upcased;
 	char *		pch;
+	EVP_MD const *	md;
 
 	/*
 	 * OpenSSL digest short names are capitalized, so uppercase the
 	 * digest name before passing to OBJ_sn2nid().  If it is not
-	 * recognized but begins with 'M' use NID_md5 to be consistent
-	 * with past behavior.
+	 * recognized but begins with 'M' or 'm' use NID_md5 to be
+	 * consistent with past behavior.
 	 */
 	INIT_SSL();
+
+	/* get name in uppercase */
 	LIB_GETBUF(upcased);
 	strlcpy(upcased, text, LIB_BUFLENGTH);
-	for (pch = upcased; '\0' != *pch; pch++)
+	for (pch = upcased; '\0' != *pch; ++pch)
 		*pch = (char)toupper((unsigned char)*pch);
-	key_type = OBJ_sn2nid(upcased);
-#else
-	key_type = 0;
-#endif
 
-	if (!key_type && 'm' == tolower((unsigned char)text[0]))
-		key_type = NID_md5;
-
-	if (!key_type)
+	md = EVP_get_digestbyname(upcased);
+	if (NULL == md && 'M' == upcased[0])
+		md = EVP_get_digestbyname("MD5");
+	if (NULL == md)
 		return 0;
 
-	if (NULL != pdigest_len) {
-#ifdef OPENSSL
-		EVP_MD_CTX	*ctx;
+	key_type   = EVP_MD_type(md);
+	digest_len = EVP_MD_size(md);
 
-		ctx = EVP_MD_CTX_new();
-		EVP_DigestInit(ctx, EVP_get_digestbynid(key_type));
-		EVP_DigestFinal(ctx, digest, &digest_len);
-		EVP_MD_CTX_free(ctx);
-		if (digest_len > max_digest_len) {
-			fprintf(stderr,
-				"key type %s %u octet digests are too big, max %lu\n",
-				keytype_name(key_type), digest_len,
-				max_digest_len);
-			msyslog(LOG_ERR,
-				"key type %s %u octet digests are too big, max %lu",
-				keytype_name(key_type), digest_len,
-				max_digest_len);
-			return 0;
-		}
-#else
-		digest_len = 16;
-#endif
+	/*----------------------------------------------------------- */
+#else	/* --*-- NON-SSL CODE --*-- */
+	/*----------------------------------------------------------- */
+
+	if ('m' == tolower((unsigned char)text[0]))
+		key_type = NID_md5;
+	else
+		return 0;
+
+	digest_len = 16;
+
+	/*----------------------------------------------------------- */
+#endif	/* --*-- NON-SSL CODE --*-- */
+	/*----------------------------------------------------------- */
+
+	if (pdigest_len)
 		*pdigest_len = digest_len;
-	}
-
 	return key_type;
 }
 
