@@ -1134,11 +1134,10 @@ generate_pkt (
 	set_li_vn_mode(x_pkt, LEAP_NOTINSYNC, ntpver, 3);
 	if (pkt_key != NULL) {
 		x_pkt->exten[0] = htonl(key_id);
-		mac_size = 20; /* max room for MAC */
-		mac_size = make_mac(x_pkt, pkt_len, mac_size,
+		mac_size = make_mac(x_pkt, pkt_len, MAX_MDG_LEN,
 				    pkt_key, (char *)&x_pkt->exten[1]);
 		if (mac_size > 0)
-			pkt_len += mac_size + 4;
+			pkt_len += mac_size + KEY_MAC_LEN;
 	}
 	return pkt_len;
 }
